# claude-skills

./: .gitignore  AUDIT_QUICK_REFERENCE.md  AUDIT_SUMMARY.md  CLAUDE.md  README.md  README_AUDIT.md  REFACTORING_COMPLETE_fine-tuning-data-generator.md  REFACTOR_COMPLETION_REPORT.md  SKILLS_AUDIT.csv  SKILLS_AUDIT_REPORT.md  feeds.json  mise.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: README.md  build.yml  deploy-pages.yml  docs.yml  wasm.yml
scripts/: build-docs.js  init_skill.py  package_skill.py  update_feeds.py
skills/: README.md
skills-tui/: .gitignore  Cargo.toml  README.md
skills-tui/src/: feed.rs  install.rs  lib.rs  main.rs  skill.rs  ui.rs  zip_handler.rs
skills-tui/tests/: discovery_test.rs  install_test.rs  zip_test.rs
skills/agent-patterns/: REFACTORING_COMPLETE_agent-patterns.md  SKILL.md
skills/agent-patterns/resources/: augmented-llm.md  core-patterns.md  dynamic-orchestration.md  (+5 more)
skills/avalonia/: SKILL.md
skills/azure-devops/: SKILL.md
skills/azure-swa/: SKILL.md
skills/blazor-blog-feature/: SKILL.md
skills/blazor-expert/: SKILL.md
skills/dotnet-aspire/: SKILL.md
skills/fine-tuning-data-generator/: SKILL.md
skills/freeagent-api/: REFACTORING_COMPLETE_freeagent-api.md  SKILL.md
skills/genaiscript/: SKILL.md
skills/github-api/: SKILL.md
skills/gof-design-patterns/: SKILL.md
skills/home-assistant-api/: REFACTOR_SUMMARY.md  SKILL.md
skills/markdown-formatter/: SKILL.md
skills/microsoft-graph/: SKILL.md
skills/root-cause-analysis/: SKILL.md
skills/thought-patterns/: SKILL.md
(+113 files in other folders)
