[package]
name = "skills-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.27", features = ["all-widgets"] }
crossterm = { version = "0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
zip = "0.6"
directories = "5.0"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
argh = "0.1"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
